--- a/info/task_description.html
+++ b/info/task_description.html
@@ -9,7 +9,7 @@ Your mission is to unite all of those units in X amount of districts so your can
 </p>
 
 <p>
-    <strong>Output: </strong> united districts (as List of list of integer). we use row major numbering (begin with 1) for grid of units. If your candidate can not win more, return empty list([]).
+    <strong>Output: </strong> united districts (as List of string). The same letters of string represents the same district. If your candidate can not win more, return empty list([]).
 </p>
 
 <div class="for_info_only">
@@ -18,20 +18,25 @@ Your mission is to unite all of those units in X amount of districts so your can
     </p>
 <pre class="brush: python">
 unfair_districts(2, [[[2, 1], [1, 1], [1, 2]],
-                     [[2, 1], [1, 1], [1, 2]]]) == [[1, 2], [3, 6], [4, 5]]
+                     [[2, 1], [1, 1], [1, 2]]]) == ['AAC',
+                                                    'BBC]
 
 
 unfair_districts(4, [[[2, 1], [2, 1], [1, 1], [1, 1]],
                      [[2, 1], [2, 1], [1, 1], [1, 1]],
                      [[1, 1], [1, 1], [1, 2], [1, 2]],
-                     [[1, 1], [1, 1], [1, 2], [1, 2]]]) == [[1, 5, 9, 13], [2, 3, 4, 8], [6, 7, 10, 11], [12, 14, 15, 16]] 
+                     [[1, 1], [1, 1], [1, 2], [1, 2]]]) == ['ACCC',
+                                                            'ABBC',
+                                                            'ABDD',
+                                                            'ABDD'] 
 
 </pre>
 <p>
 <strong>Precondition:</strong><br>
 </p>
 <ul>
-    <li> 2 &le; grid_rows, grid_columns &le; 6</li>
+    <li> 2 &le; grid_rows &le; 6</li>
+    <li> 2 &le; grid_columns &le; 6</li>
     <li>6 &le; grid_rows * grid_columns &le; 25</li>
     <li>2 &le; size_of_each_district</li>
     <li>0 &le; each_votes &le; 9</li>
