amount of people for each district

--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,7 +5,7 @@ Your mission is to unite all of those units in X amount of districts so your can
 </p>
 
 <p>
-    <strong>Input: </strong> Two arguments. Size of each district (as integer) , grid of all electoral zone (as list of list (each unit has [A-peoples, B-peoples]))
+    <strong>Input: </strong> Two arguments. Amount of people for each district (as integer) , grid of all electoral zone (as list of list (each unit has [A-peoples, B-peoples]))
 </p>
 
 <p>
