--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,4 +1,4 @@
-<div class="for_info_only" style="text-align: center">
+﻿<div class="for_info_only" style="text-align: center">
     <img src="{{MEDIA}}title.png" style="max-height: 500px">
 </div>
 
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-    <strong>Output: </strong> united districts (as List of string). The same letters of string represents the same district. If your candidate can not win more, return empty list([]).
+    <strong>Output: </strong> united districts (as List of string). The same letters of string represents the same district. If candidate A can not win more, return empty list([]).
 </p>
 
 <div class="for_info_only">
