--- a/info/task_description.html
+++ b/info/task_description.html
@@ -38,6 +38,7 @@ unfair_districts(9, [[[0, 3], [3, 3], [1, 1]],
                                                     'ACC'] 
 
 </pre>
+<p style="text-align: center;"><img src="{{MEDIA}}example.png" style="max-height: 193px"></p>
 <p>
 <strong>Precondition:</strong><br>
 </p>
